# fbrender

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/cube/: cube.cpp
examples/cube2/: cube2.cpp
fbrender/: CMakeLists.txt  main.cpp
include/: matrix4.h  transform.h  types.h  vector4.h  vertex.h
include/render/: fb_render_device.h  render_device.h
libfbrender/: matrix4.cpp  transform.cpp
libfbrender/render/: .render_device.cpp.swp  fb_render_device.cpp  render_device.cpp
src/: CMakeLists.txt  matrix4.cpp  transform.cpp  vector4.cpp
src/render/: render_device.cpp
